<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/scientific"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="34dp"
        android:text="@string/scientific"
        app:layout_constraintEnd_toStartOf="@+id/converter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="34dp"
        android:text="@string/converter"
        app:layout_constraintStart_toEndOf="@+id/scientific"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:paddingLeft="34dp"
        android:paddingRight="34dp"
        android:textSize="15pt"
        android:gravity="bottom"
        android:textDirection="ltr"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/converter"
        tools:layout_editor_absoluteY="195dp" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingRight="34dp"
        android:paddingLeft="34dp"
        android:paddingTop="23dp"
        android:paddingBottom="23dp"
        android:textSize="18pt"
        android:maxLines="1"
        android:textAlignment="gravity"
        android:scrollHorizontally="true"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        tools:layout_editor_absoluteY="195dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/all_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_clear"
        android:textSize="12pt"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/power"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintBottom_toTopOf="@id/seven"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="381dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@id/divide"
        app:layout_constraintStart_toEndOf="@id/all_clear"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        tools:layout_editor_absoluteY="381dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@id/back_space"
        app:layout_constraintStart_toEndOf="@id/power"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintBottom_toTopOf="@id/nine"
        tools:layout_editor_absoluteY="381dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/back_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:text="@string/back_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divide"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintBottom_toTopOf="@id/multiply"
        tools:layout_editor_absoluteY="381dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/eight"
        app:layout_constraintTop_toBottomOf="@id/all_clear"
        app:layout_constraintBottom_toTopOf="@+id/four"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:textSize="12pt"
        app:layout_constraintStart_toEndOf="@id/seven"
        app:layout_constraintEnd_toStartOf="@id/nine"
        app:layout_constraintTop_toBottomOf="@+id/power"
        app:layout_constraintBottom_toTopOf="@id/five"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="456dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@id/multiply"
        app:layout_constraintStart_toEndOf="@id/eight"
        app:layout_constraintTop_toBottomOf="@id/divide"
        app:layout_constraintBottom_toTopOf="@+id/six"
        tools:layout_editor_absoluteY="439dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_space"
        app:layout_constraintStart_toEndOf="@id/nine"
        app:layout_constraintBottom_toTopOf="@+id/subtract"
        tools:layout_editor_absoluteY="429dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/five"
        app:layout_constraintTop_toBottomOf="@id/seven"
        app:layout_constraintBottom_toTopOf="@id/one"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@id/six"
        app:layout_constraintTop_toBottomOf="@id/eight"
        app:layout_constraintStart_toEndOf="@id/four"
        app:layout_constraintBottom_toTopOf="@+id/two"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:textSize="12pt"
        app:layout_constraintStart_toEndOf="@id/five"
        app:layout_constraintEnd_toStartOf="@id/subtract"
        app:layout_constraintTop_toBottomOf="@id/nine"
        app:layout_constraintBottom_toTopOf="@id/three"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@id/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/add"
        tools:layout_editor_absoluteY="504dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="12pt"
        app:layout_constraintBottom_toTopOf="@id/clear"
        app:layout_constraintEnd_toStartOf="@id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/four" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textSize="12pt"
        app:layout_constraintStart_toEndOf="@id/one"
        app:layout_constraintEnd_toStartOf="@id/three"
        app:layout_constraintTop_toBottomOf="@id/five"
        app:layout_constraintBottom_toTopOf="@id/zero"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textSize="12pt"
        app:layout_constraintStart_toEndOf="@id/two"
        app:layout_constraintEnd_toStartOf="@id/add"
        app:layout_constraintTop_toBottomOf="@id/six"
        app:layout_constraintBottom_toTopOf="@id/decimal_point"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@+id/subtract"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="566dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="12pt"
        android:textColor="@color/red"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/one" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="12pt"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decimal_point"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@id/two" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/decimal_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textSize="12pt"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toStartOf="@id/equal"
        app:layout_constraintTop_toBottomOf="@id/three"
        app:layout_constraintStart_toEndOf="@id/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="444dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:textSize="12pt"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/decimal_point"
        tools:layout_editor_absoluteY="630dp" />

</androidx.constraintlayout.widget.ConstraintLayout>